[package]
edition = "2021"
name = "hc_zome_profiles_coordinator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_profiles_coordinator"

[dependencies]

hc_zome_profiles_coordinator = { git = "https://github.com/holochain-open-dev/profiles", rev = "b530eb6f4c27d755df5698256cc31436d0be4c67" }
